--- a/cloverbazar/views/contacto.ejs
+++ b/cloverbazar/views/contacto.ejs
@@ -12,7 +12,7 @@
         </form>
     </section>
     <section class="datos-contacto">
-        <div>
+        <div class="datos1">
             <h5>Contactanos:</h5>
             <a href="https://wa.me/5491128056500" target="_blank">
                 <p>Tel: +54 9 1128056500</p>
@@ -24,7 +24,7 @@
                 <p>Villa Crespo, CABA</p>
             </a>
         </div>
-        <div>
+        <div class="mapa">
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.168225682907!2d-58.44098618477055!3d-34.599907380460536!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca73421d30b1%3A0xc39e5a472811c6de!2sAv.%20Corrientes%20%26%20Ra%C3%BAl%20Scalabrini%20Ort%C3%ADz%2C%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1600295933092!5m2!1ses!2sar"
                 width="500" height="200" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
