--- a/cloverbazar/views/products/productListCambios.ejs
+++ b/cloverbazar/views/products/productListCambios.ejs
@@ -1,146 +1,12 @@
-<style>
-    main{
-    text-align: center;
-}
-
-body{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    min-height: 100vh;
-}
-
-img{
-    display: block;
-    max-width: 100px;
-}
-
-form{
-    margin: auto;
-}
-
-.section-form{
-    max-width: 1100px;
-    display: flex;
-    flex-flow: column;
-    margin: 3rem auto;
-    padding: 20px;
-    position: relative;;
-}
-
-.section-form h2{
-    font-size: 2.5rem;
-}
-
-.grid-container{
-    border-bottom: solid 2px #fbdcc4;
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    max-width: 280px;
-    position: relative;
-}
-
-
-.grid-item{
-    padding: 1rem;
-    align-self: center;
-}
-
-.confirmar-compra{
-    background-color: #2e2e2e;
-    color: white;
-    font-size: 18px;
-    border-style: none;
-    border-radius: 5px;
-    padding: 10px 20px 10px 20px;
-    margin: 10px auto;
-    text-decoration: none;
-}
-
-.ctas-container{
-    margin-top: 50px;
-}
-
-.seguir-comprando{
-    font-size: 14px;
-    color: black;
-    margin-left: 10px;
-}
-
-.total-compra{
-    margin: 40px;
-    font-size: 22px;
-}
-
-.total-precio{
-    font-weight: bold;
-    margin-left: 10px;
-}
-
-.link-container {
-    margin-bottom: 100px;
-}
-
-.link-productos{
-    margin-top: 40px;
-    width: 150px;
-    padding: 15px;
-    border: solid 4px #fbdcc4;
-    border-radius: 30px;
-    background-color: white;
-    text-align: center;
-    text-decoration: none;
-    color: #2e2e2e;
-    box-shadow: 5px 5px 25px -9px rgba(0,0,0,0.75);
-}
-
-.link-productos:hover{
-    background-color: #fbdcc4;
-    transition-duration: 200ms;
-}
-select{
-    padding: 10px;
-    background-color: rgb(46, 46, 46);
-    color: #fbdcc4;
-    border-radius: 5px;
-
-}
-select:hover{
-    cursor:pointer;
-    background-color: rgb(100,100,100);
-}
-
-.botones{
-    margin-bottom: 20px;
-}
-
-.botones a {
-    margin: 15px;
-}
-
-.grid-input {
-    text-align: center;
-    padding: 10px;
-    border: 0.1px solid #fbdcc4;
-    width: 50px;
-    border-radius: 5px;
-}
-
-@media (min-width: 768px){
-    .grid-container{
-    border-bottom: solid 2px #fbdcc4;
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    max-width: 900px;
-    position: relative;
-}
-}
-</style>
+<link rel="stylesheet" href="/stylesheets/cambios.css">
 <%-include('../partials/header', {title: 'Listado de productos'})%>
 <main>
     
     <section class="section-form">
         <h2>Modificaciones</h2>
+        <div class="botones">
+            <a href="/products" class="confirmar-compra">Listado productos</a>
+        </div>
         <form action="/products/cambios" method="POST">
         <%for(let i=0 ; i < productos.length ; i++) {%>
         <article class="grid-container">
