--- a/cloverbazar/views/users/editarPerfil.ejs
+++ b/cloverbazar/views/users/editarPerfil.ejs
@@ -137,7 +137,7 @@
     <% } %>
     <section class="section-form">
         <h2>Mis datos personales</h2>
-        <form action="/users/perfil/<%=usuario.id%>" method="POST" class="forms">
+        <form action="/users/editar/<%=usuario.id%>" method="POST" class="forms">
             <div class="grid-container">
                 <div class="grid-item">
                     <input class="grid-input" type="text" name="nombre" placeholder="Nombre" value="<%=usuario.nombre%>">
