--- a/cloverbazar/views/users/perfil.ejs
+++ b/cloverbazar/views/users/perfil.ejs
@@ -148,7 +148,9 @@
     <div class="options-container">
         <a href="/users/editar/<%=usuario.id%>"> <h3>Cambiar datos usuario</h3> </a>
         <a href="/users/password/<%=usuario.id%>"> <h3>Cambiar contraseña</h3> </a>
+        <%if(!locals.adminLogueado){%>
         <a href="/users/historialCompras/<%=usuario.id%>"> <h3>Historial de compras</h3> </a>
+        <% } %>
         <a href="/users/destroy/<%=usuario.id%>"> <h3 style="color: red; text-decoration-color: red;">ELIMINAR CUENTA</h3> </a>
     </div>
 </main>
