--- a/cloverbazar/public/stylesheets/modals.css
+++ b/cloverbazar/public/stylesheets/modals.css
@@ -50,7 +50,7 @@
     padding: 20px;
     border: none;
     border-radius: 5px;
-    width: 30%; /* Could be more or less, depending on screen size */
+    width: 200px; /* Could be more or less, depending on screen size */
     text-align: center;
   }
 
@@ -95,4 +95,10 @@
     color: black;
     text-decoration: none;
     cursor: pointer;
+  }
+
+  @media(min-width: 768px){
+    .modal-content{
+      width: 30%;
+    }
   }
