--- a/cloverbazar/public/stylesheets/index.css
+++ b/cloverbazar/public/stylesheets/index.css
@@ -13,7 +13,7 @@ main section.carrusel{
 main section.carrusel img{
     object-fit: cover;
     width: 100%;
-    height: 700px;
+    max-height: 700px;
 }
 
 main section.carrusel a{
@@ -23,19 +23,25 @@ main section.carrusel a{
 
 .carrusel-content{
     position: absolute;
-    top: 250px;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .carrusel-content h1{ 
-    font-size: 5rem;
-    text-align: center;
+    font-size: calc(1.8em + 1vw);;
     color: rgb(46, 46, 46);
-    margin: 0 0 40px 0;
+    margin: 0;
 }
 
 .carrusel-content p {
-    text-align: center;
-    font-size: 2rem;
+    font-size: calc(1.2em + 1vw);
+    margin: 0;
 }
 
 main section{
