--- a/cloverbazar/public/stylesheets/productAdd.css
+++ b/cloverbazar/public/stylesheets/productAdd.css
@@ -30,14 +30,16 @@ form.forms input {
     border: none;
     width: 100%;
     border-radius: 5px;
+    max-width: 372px;
 }
 
 form.forms select {
     margin: auto;
     padding: 10px;
     border: none;
-    width: 91%;
+    width: 100%;
     border-radius: 5px;
+    max-width: 372px;
 }
 
 form.forms .contenedor-botones{
@@ -60,6 +62,15 @@ form.forms button:last-child{
     text-decoration: underline;
 }
 
+#descripcionProducto{
+    margin: auto;
+    width: 100%;
+    border: none;
+    border-radius: 10px;
+    padding: 10px;
+    max-width: 372px;
+}
+
 @media(min-width:768px){
     form.forms{
         width: 672px;
@@ -69,9 +80,6 @@ form.forms button:last-child{
         width: 130px;
     }
 
-    form.forms input{
-        width: 340px;
-    }
 
     form.forms .contenedor-datos{
         width: 372px;
