--- a/cloverbazar/views/index.ejs
+++ b/cloverbazar/views/index.ejs
@@ -46,7 +46,7 @@
       <a href="/products/detail/<%=productos[i].id%>">
         <img src="/images/products/<%=productos[i].imagenes[0].ruta%>" alt="Producto">
         <h3><%=productos[i].nombre%></h3>
-        <h3><%=productos[i].precio%></h3>
+        <h3>$<%=productos[i].precio%></h3>
       </a>
     </article>
     <% } } %>
