--- a/cloverbazar/views/users/perfil.ejs
+++ b/cloverbazar/views/users/perfil.ejs
@@ -1,116 +1,4 @@
-<style>
-    main{
-        text-align: center;
-        display: flex;
-        flex-flow: column;
-        margin-top: 100px;
-        margin-bottom: 100px;
-    }
-
-    body{
-        display: flex;
-        flex-flow: column;
-        justify-content: space-between;
-        min-height: 100vh;
-    }
-
-    .section-form{
-        display: flex;
-        flex-flow: column;
-        align-items: center;
-        background-color: #faeded;
-        margin: 10px;
-        padding: 60px;
-        border-radius: 20px;
-    }
-
-    .options-container{
-        display: flex;
-        flex-flow: column;
-        justify-content: center;
-        background-color: #faeded;
-        margin: 10px;
-        padding: 60px;
-        border-radius: 20px;
-    }
-
-    .options-container a{
-        color: #2e2e2e;
-    }
-
-    .forms{
-        max-width: 800px;
-    }
-
-    .grid-container{
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-gap: 12px;
-        width: 290px;
-    }
-
-    .grid-item{
-        width: 100%;
-    }
-    
-    .grid-input{  
-        padding: 15px;
-        border: none;
-        border-bottom: solid 1px #bbb4be;
-        background: none;
-        width: 50%;
-    }
-
-    .grid-input:focus{
-        outline: none;
-    }
-
-    .guardar-cambios{
-        background-color: #2e2e2e;
-        color: white;
-        font-size: 18px;
-        border-style: none;
-        border-radius: 20px;
-        padding: 10px 20px 10px 20px;
-        margin-top: 50px;
-}
-
-    @media(min-width: 786px){
-        main{
-            margin: auto;
-            text-align: center;
-            display: flex;
-            flex-flow: row;
-            justify-content: space-around;
-            max-width: 1100px;
-        }
-
-        .section-form{
-            max-width: 600px;
-            display: flex;
-            flex-flow: column;
-            align-items: center;
-            background-color: #faeded;
-            margin: 10px;
-            padding: 60px;
-            border-radius: 20px;
-        }
-
-        .grid-container{
-            margin: auto;
-            max-width: 500px;
-        }
-
-        .grid-item{
-            width: 100%;
-        }
-        
-        .grid-input{  
-            max-width: 200px;
-        }
-    }
-
-</style>
+<link rel="stylesheet" href="/stylesheets/profile.css">
 <%-include('../partials/header', {title: 'Hola ' + usuario.nombre})%>
 <main>
     <% if (typeof errors != "undefined"){ %>
@@ -123,9 +11,8 @@
     <% if(typeof errorAlLoguear != "undefined"){ %>
         <p style="color:red"><%= errorAlLoguear %></p>
     <% } %>
-    <section class="section-form">
+    <section class="datos-form">
         <h2>Mis datos personales</h2>
-        <form action="/users/perfil/<%=usuario.id%>" method="POST" class="forms">
             <div class="grid-container">
                 <div class="grid-item">
                     <p class="grid-input"> Nombre:  <%=usuario.nombre%> </p>
@@ -143,7 +30,6 @@
                     <p class="grid-input"> Telefono: <%=usuario.telefono%> </p>
                 </div>
             </div>
-        </form>
     </section>
     <div class="options-container">
         <a href="/users/editar/<%=usuario.id%>"> <h3>Cambiar datos usuario</h3> </a>
