--- a/cloverbazar/public/stylesheets/modals.css
+++ b/cloverbazar/public/stylesheets/modals.css
@@ -62,6 +62,8 @@
     margin-bottom: 20px;
     border-radius: 5px;
     font-size: 15px;
+    margin-right: 15px;
+    margin-left: 15px;
   }
 
   .modal-content a:visited {
@@ -95,6 +97,11 @@
     color: black;
     text-decoration: none;
     cursor: pointer;
+  }
+
+  .links-modal {
+    display: flex;
+    justify-content: center;
   }
 
   @media(min-width: 768px){
