--- a/cloverbazar/views/users/perfil.ejs
+++ b/cloverbazar/views/users/perfil.ejs
@@ -41,8 +41,8 @@
         <a href="/users/registerAdmin"> <h3>Registrar administrador</h3> </a>
         <% } %>
         <!-- Trigger/Open The Modal -->
-        <button id="myBtn" class="btn">
-        <h3 style="color: red; text-decoration-color: red;">ELIMINAR CUENTA</h3> 
+        <button id="myBtn" class="btn" style="background-color: #faeded;">
+        <h3 style="color: red; text-decoration-color: red; text-decoration: underline;">ELIMINAR CUENTA</h3> 
         </button>
     </div>
     <!-- The Modal -->
