--- a/cloverbazar/views/users/registerAdmin.ejs
+++ b/cloverbazar/views/users/registerAdmin.ejs
@@ -20,27 +20,27 @@
             <div class="grid-container">
                 <div class="grid-item">
                     <input class="grid-input" type="text" name="nombre" id="nombre" placeholder="Nombre">
-                    <div class="nombreError"></div>
+                    <div class="nombreError error-style"></div>
                 </div>
                 <div class="grid-item">
                     <input class="grid-input" type="text" name="apellido" id="apellido" placeholder="Apellido">
-                    <div class="apellidoError"></div>
+                    <div class="apellidoError error-style"></div>
                 </div>
                 <div class="grid-item">
                     <input class="grid-input" type="email" name="email" id="email" placeholder="E-mail">
-                    <div class="emailError"></div>
+                    <div class="emailError error-style"></div>
                 </div>
                 <div class="grid-item">
                     <input class="grid-input" type="password" name="password" id="password" placeholder="Contraseña">
-                    <div class="passwordError"></div>
+                    <div class="passwordError error-style"></div>
                 </div>
                 <div class="grid-item">
                     <input class="grid-input" type="password" name="confirmPassword" id="confirmPassword" placeholder="Confirmar contraseña">
-                    <div class="confirmPasswordError"></div>
+                    <div class="confirmPasswordError error-style"></div>
                 </div>
                 <div class="grid-item">
                     <input class="grid-input" type="text" name="telefono" id="telefono" placeholder="Telefono">
-                    <div class="telefonoError"></div>
+                    <div class="telefonoError error-style"></div>
                 </div>
                 <div class="grid-item">
                     <input class="grid-input" type="text" name="direccion" id="direccion" placeholder="Direccion">
