--- a/cloverbazar/public/stylesheets/modals.css
+++ b/cloverbazar/public/stylesheets/modals.css
@@ -69,6 +69,10 @@
   .modal-content a:visited {
     color: white;
   }
+  .modal-content a:hover{
+    cursor: pointer;
+    background-color: rgb(100,100,100);
+  }
   
   /* The Close Button */
   .close {
