--- a/cloverbazar/public/stylesheets/product.css
+++ b/cloverbazar/public/stylesheets/product.css
@@ -43,7 +43,7 @@ main section article.tarjeta-producto{
 main section article.tarjeta-producto div.tarjeta-dto{
     position: absolute;
     background-color: #faeded;
-    color: black;
+    color: rgb(46, 46, 46);
     top: 10px;
     right: 20px;
     padding: 5px;
@@ -53,7 +53,7 @@ main section article .precios h3{
     display: inline-block;
 }
 main section article h3.precioConDto{
-    color: black;
+    color: rgb(46, 46, 46);
     margin-left: 15px;
 }
 main section article h3.agotado{
